Add Pmeasukkan Table and Swagger Dokumentation
